# nlp-in-action

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebook/: TF-IDFvectors.ipynb  Untitled.ipynb  word_tokenization.ipynb
