[tool.poetry]
name = "nlp-in-action"
version = "0.1.0"
description = ""
authors = ["akitanak <akihito_tanaka@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.14"
spacy = "^3.0.6"
nltk = "^3.6.2"
pandas = "^1.2.4"
vaderSentiment = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.1"
rope = "^0.19.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
